<resources>
    <string name="app_name">Steam Spyglass</string>

    <string name="navigation_home">Home</string>
    <string name="navigation_all">All</string>
    <string name="navigation_top">Top</string>
    <string name="navigation_genre">Genre</string>
    <string name="navigation_about">About</string>
    <string name="navTop2Weeks">2 Weeks</string>
    <string name="navTopOwned">Owned</string>
    <string name="navTopTotal">Total</string>
    <string name="navGenreAction">Action</string>
    <string name="navGenreStrategy">Strategy</string>
    <string name="navGenreRPG">RPG</string>
    <string name="navGenreIndie">Indie</string>
    <string name="navGenreAdventure">Adventure</string>
    <string name="navGenreSports">Sports</string>
    <string name="navGenreSimulation">Simulation</string>
    <string name="navGenreEarlyAccess">Early Access</string>
    <string name="navGenreExEarlyAccess">Ex Early Access</string>
    <string name="navGenreMMO">MMO</string>
    <string name="navGenreFree">Free</string>

    <string name="titleHome">Home</string>
    <string name="titleAll">All Apps</string>
    <string name="titleNotifications">Notifications</string>
    <string name="titleSettings">Settings</string>
    <string name="titleAbout">About</string>
    <string name="titleTop2Weeks">Top: 2 Weeks</string>
    <string name="titleTopOwned">Top: Owned</string>
    <string name="titleTopTotal">Top: All Time</string>
    <string name="titleGenreAction">Genre: Action</string>
    <string name="titleGenreStrategy">Genre: Strategy</string>
    <string name="titleGenreRPG">Genre: RPG</string>
    <string name="titleGenreIndie">Genre: Indie</string>
    <string name="titleGenreAdventure">Genre: Adventure</string>
    <string name="titleGenreSports">Genre: Sports</string>
    <string name="titleGenreSimulation">Genre: Simulation</string>
    <string name="titleGenreEarlyAccess">Genre: Early Access</string>
    <string name="titleGenreExEarlyAccess">Genre: Ex Early Access</string>
    <string name="titleGenreMMO">Genre: MMO</string>
    <string name="titleGenreFree">Genre: Free</string>
    <string name="capsuleContentDescription">App Thumbnail</string>
    <string name="updateData">Update Data</string>

    <string name="downloadingAll">Downloading all apps</string>
    <string name="downloadingTop2Weeks">Downloading top for 2 weeks</string>
    <string name="downloadingTopOwned">Downloading top owned apps</string>
    <string name="downloadingTopTotal">Downloading all time top</string>
    <string name="downloadingGenreAction">Downloading action games</string>
    <string name="downloadingGenreStrategy">Downloading strategy games</string>
    <string name="downloadingGenreRPG">Downloading RPG games</string>
    <string name="downloadingGenreAdventure">Downloading Adventure games</string>
    <string name="downloadingGenreIndie">Downloading Indie games</string>
    <string name="downloadingGenreSports">Downloading sports games</string>
    <string name="downloadingGenreSimulation">Downloading simulation games</string>
    <string name="downloadingGenreEarlyAccess">Downloading Early Access games</string>
    <string name="downloadingGenreExEarlyAccess">Downloading Ex Early Access games</string>
    <string name="downloadingGenreMmo">Downloading MMO games</string>
    <string name="downloadingGenreFree">Downloading Free games</string>

    <string name="updatingAll">Updating all apps</string>
    <string name="updatingTop2Weeks">Updating top for 2 weeks</string>
    <string name="updatingTopOwned">Updating top owned apps</string>
    <string name="updatingTopTotal">Updating all time top</string>
    <string name="updatingGenreAction">Updating action games</string>
    <string name="updatingGenreStrategy">Updating strategy games</string>
    <string name="updatingGenreRPG">Updating RPG games</string>
    <string name="updatingGenreIndie">Updating Indie games</string>
    <string name="updatingGenreAdventure">Updating Adventure games</string>
    <string name="updatingGenreSports">Updating sports games</string>
    <string name="updatingGenreSimulation">Updating simulation games</string>
    <string name="updatingGenreEarlyAccess">Updating Early Access games</string>
    <string name="updatingGenreExEarlyAccess">Updating Ex Early Access games</string>
    <string name="updatingGenreMmo">Updating MMO games</string>
    <string name="updatingGenreFree">Updating Free games</string>

    <string name="notificationChannelName">SteamSpy</string>
    <string name="notificationChannelDescription">SteamSpy Notification Channel</string>
    <string name="notificationDataUpdateTitle">SteamSpy: Data Update</string>
    <string name="dataUpdateNotificationText">Updating Steam Apps Data</string>
    <string name="steamAppImageContentDescription">Steam App Image</string>
    <string name="developers">Developers</string>
    <string name="publishers">Publishers</string>
    <string name="price">Price</string>
    <string name="rank">Rank</string>
    <string name="concurrentPlayers">Concurrent Players</string>
    <string name="median2Weeks">Median 2 Weeks</string>
    <string name="totalMedian">Total Median</string>
    <string name="average2Weeks">Average 2 Weeks</string>
    <string name="totalAverage">Total Average</string>
    <string name="owners">Owners</string>
    <string name="totalPlayers">Total Players</string>
    <string name="players2Weeks">Players 2 Weeks</string>

    <string name="sharedPreferencesFileKey">shared_preferences_file</string>
    <string name="splashScreenLogo">Steam Spyglass Logo</string>
    <string name="aboutTempMessage">About, coming soon</string>
    <string name="homeScreenTempMessage">Home Screen, Coming Soon</string>
    <string name="notificationsTempMessage">Notifications Screen, Coming Soon</string>
    <string name="settingsTempMessage">Settings Screen, Coming Soon</string>

    <string name="appDetailsViewPagerInfo">Info</string>
    <string name="appDetailsViewPagerTags">Tags</string>
    <string name="appDetailsViewPagerNumbers">Numbers</string>
    <string name="appDetailsViewPagerNumbers2">More</string>

    <string name="wtf">WTF has just happen?</string>
    <string name="searchDialogHeader">Search</string>
    <string name="searchDialogInputHint">App\'s name</string>
    <string name="searchDialogSubmitAction">Submit</string>
    <string name="searchDialogCancelAction">Cancel</string>
    <string name="poweredBy">Powered by www.steamspy.com</string>
    <string name="viewSource">View source: https://github.com/alex199568/steamspy</string>
    <string name="contactMe">Contact me sasha.199568@gmail.com</string>
    <string name="hostUnreachableErrorMessage">is unrechable</string>
    <string name="networkErrorTitle">Network Error</string>
    <string name="dialogDismissDefault">Ok</string>
    <string name="noSearchResultsMessage">There are no apps which match the name</string>
    <string name="noAppsMessage">No apps to show, try to update data</string>

    <string name="lastDataUpdate">Last Data Update: </string>
    <string name="dataHasNeverBeenUpdated">data has not been updated yet</string>
    <string name="preferenceAutomaticDataUpdateTitle">Enable</string>
    <string name="preferenceAutomaticDataUpdateDescription">Automatic data update will be done every night</string>

    <string name="navSettings">Settings</string>
    <string name="mobileDataUpdateWarningTitle">Update Using Mobile Data</string>
    <string name="mobileDataWarningContent">It seems like you are not connected to a wifi. The data update will use ~20MB. Are you sure you want to proceed?</string>
    <string name="mobileDataUpdateConfirm">Yes</string>
    <string name="mobileDataUpdateCancel">No</string>

</resources>
