<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/averageName"
            style="@style/normalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/totalAverage"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ccuNumber"
            style="@style/mainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/ccuName" />

        <TextView
            android:id="@+id/average2WName"
            style="@style/normalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/average2Weeks"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/averageName" />

        <TextView
            android:id="@+id/median2WNumber"
            style="@style/mainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/median2WName" />

        <TextView
            android:id="@+id/medianName"
            style="@style/normalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/totalMedian"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/average2WName" />

        <TextView
            android:id="@+id/median2WName"
            style="@style/normalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/median2Weeks"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/medianName" />

        <TextView
            android:id="@+id/ccuName"
            style="@style/normalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/concurrentPlayers"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/median2WName" />

        <TextView
            android:id="@+id/averageNumber"
            style="@style/mainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/averageName" />

        <TextView
            android:id="@+id/average2WNumber"
            style="@style/mainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/average2WName" />

        <TextView
            android:id="@+id/medianNumber"
            style="@style/mainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/medianName" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
